# mini-engine

./: CMakeLists.txt
include/: stb_image.h
include/glad/: glad.h
include/imgui/: imconfig.h  imgui.cpp  imgui_demo.cpp
include/learnopengl/: filesystem.h
res/shaders/: shader.fs
src/: Context.cpp  Context.h  IModule.h  glad.c  main.cpp
src/algorithms/: AStar.h  AStar_demo.cpp  HanoiTower.cpp  KMP.cpp  binarySearch.cpp  bubbleSort.cpp  combinations.cpp  exchange.cpp  nQueens.cpp  permutations.cpp  quickSort.cpp  shuffle.cpp
src/datastructrue/: avl.h  binary_search_tree_demo.cpp  btree_demo.cpp  rbtree_demo.cpp
src/leetcode/: 1046. Last Stone Weight.cpp  3.longestSubstringWithoutRepeatingCharacters.cpp  51. N-Queens.cpp
src/leetcode/array/: 1.twoSum.cpp  11. Container With Most Water.cpp  118. Pascal's Triangle.cpp  121.bestTimetoBuyandSelStock.cpp  122. Best Time to Buy and Sell Stock II.cpp  15. 3Sum.cpp  162. Find Peak Element.cpp  169. Majority Element.cpp  189. Rotate Array.cpp  217. Contains Duplicate.cpp  238. Product of Array Except Self.cpp  239. Sliding Window Maximum.cpp  26. Remove Duplicates from Sorted Array.cpp  268. Missing Number.cpp  283. Move Zeroes.cpp  287. Find the Duplicate Number.cpp  33. Search in Rotated Sorted Array.cpp  34. Find First and Last Position of Element in Sorted Array.cpp  380. Insert Delete GetRandom O(1).cpp  48. Rotate Image.cpp  54. Spiral Matrix.cpp  55. Jump Game.cpp  (+7 more)
src/module/: GLDrawQuad.cpp  GLDrawQuad.h  GUIDemo.cpp  GUIDemo.h
src/test/: hellowworld.cpp  strTest.cpp  strlenTest.cpp  structureSizeof.cpp
(+40 files in other folders)
